Fix Breadcrumb and Unique Code parents
